# paper_analizer

./: .gitignore  CITATION.cff  README.md  codemeta.json  main.py  pyproject.toml  rationale.md  requirements.txt
docs/: conf.py  index.rst  rationale.rst
src/: grobid_bubbles.py  grobid_figures.py  grobid_links.py
