[tool.poetry]
name = "paper_analizer"
version = "0.1.0"
description = "Software that analizes and shows some data bpers"
authors = ["Anastasia Muran Trus <anastasia.muran.trus@alumnos.upm.es>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
grobid-client-python = "^0.0.8"
wordcloud = "^1.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
